--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<form action="mailto:teampk@mail.ru" enctype="text/plain" method="post">
+<form action="mailto:" enctype="text/plain" method="post">
     <label for="">Your name:</label>
     <input type="text" name="contact_name" id="input_name">
     <label for="">Your Email:</label>
