--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <td>
             <h1>Vladimir</h1>
-            <p>A tiny developer from Belarus</p>
+            <p>A tiny developer from a tiny town in Belarus</p>
 
         </td>
     </tr>
