--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>CV Python Developer's Page</title>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <table>
     <tbody>
     <tr>
-        <td><img src="img/dev_image.jpg" width="50%" alt=""></td>
+        <td><img src="img/dev_image.jpg" alt=""></td>
 
         <td>
             <h1>Vladimir</h1>
@@ -22,6 +23,7 @@
     </tbody>
 </table>
 <div>
+    <hr>
     <h3>Another links:</h3>
     <ul>
         <li><a href="career.html">Work experience</a></li>
